include/ciaaw_saw_2021.h

/** @brief C API Object representing an element.*/
struct ciaaw_saw_element_t_2021{
    char element[25]; /**< Element name. */
    char symbol[9]; /**< Element symbol. */
    int z; /**< Element atomic number. */
    double saw_min; /**< Min standard atomic weight. */
    double saw_max; /**< Max standard atomic weight. */
    double saw; /**< Value standard atomic weight. */
    double saw_u; /**< Uncertainty standard atomic weight. */
    double asaw; /**< Abridged value standard atomic weight. */
    double asaw_u; /**< Abridged uncertainty standard atomic weight. */
};
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Pb_2021;/**< C API Pb_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Bi_2021;/**< C API Bi_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Po_2021;/**< C API Po_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_At_2021;/**< C API At_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Rn_2021;/**< C API Rn_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Fr_2021;/**< C API Fr_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ra_2021;/**< C API Ra_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ac_2021;/**< C API Ac_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Th_2021;/**< C API Th_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Pa_2021;/**< C API Pa_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_U_2021;/**< C API U_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Np_2021;/**< C API Np_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Pu_2021;/**< C API Pu_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Am_2021;/**< C API Am_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Cm_2021;/**< C API Cm_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Bk_2021;/**< C API Bk_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Cf_2021;/**< C API Cf_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Es_2021;/**< C API Es_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Fm_2021;/**< C API Fm_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Md_2021;/**< C API Md_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_No_2021;/**< C API No_2021.*/