src/ciaaw_saw_2021.f90


!> lead.
type(element_t_2021), parameter, public :: Pb_2021 =&
element_t_2021("lead","Pb", 82, 206.14d0, 207.94d0, 207.0d0, 0.6d0, 207.2d0, 1.1d0)
!> C API lead.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Pb_2021") :: capi_Pb_2021 =&
capi_element_t_2021(&
["l","e","a","d",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","b",c_null_char, " "," "," "," "," "," "], &
Pb_2021%z, &
Pb_2021%saw_max, Pb_2021%saw_min, Pb_2021%saw, Pb_2021%saw_u, Pb_2021%asaw, Pb_2021%asaw_u)

!> bismuth.
type(element_t_2021), parameter, public :: Bi_2021 =&
element_t_2021("bismuth","Bi", 83, nan, nan, 208.98040d0, 0.00001d0, 208.98d0, 0.01d0)
!> C API bismuth.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Bi_2021") :: capi_Bi_2021 =&
capi_element_t_2021(&
["b","i","s","m","u","t","h",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","i",c_null_char, " "," "," "," "," "," "], &
Bi_2021%z, &
Bi_2021%saw_max, Bi_2021%saw_min, Bi_2021%saw, Bi_2021%saw_u, Bi_2021%asaw, Bi_2021%asaw_u)

!> polonium.
type(element_t_2021), parameter, public :: Po_2021 =&
element_t_2021("polonium","Po", 84, nan, nan, nan, nan, nan, nan)
!> C API polonium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Po_2021") :: capi_Po_2021 =&
capi_element_t_2021(&
["p","o","l","o","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","o",c_null_char, " "," "," "," "," "," "], &
Po_2021%z, &
Po_2021%saw_max, Po_2021%saw_min, Po_2021%saw, Po_2021%saw_u, Po_2021%asaw, Po_2021%asaw_u)

!> astatine.
type(element_t_2021), parameter, public :: At_2021 =&
element_t_2021("astatine","At", 85, nan, nan, nan, nan, nan, nan)
!> C API astatine.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_At_2021") :: capi_At_2021 =&
capi_element_t_2021(&
["a","s","t","a","t","i","n","e",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","t",c_null_char, " "," "," "," "," "," "], &
At_2021%z, &
At_2021%saw_max, At_2021%saw_min, At_2021%saw, At_2021%saw_u, At_2021%asaw, At_2021%asaw_u)

!> radon.
type(element_t_2021), parameter, public :: Rn_2021 =&
element_t_2021("radon","Rn", 86, nan, nan, nan, nan, nan, nan)
!> C API radon.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Rn_2021") :: capi_Rn_2021 =&
capi_element_t_2021(&
["r","a","d","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","n",c_null_char, " "," "," "," "," "," "], &
Rn_2021%z, &
Rn_2021%saw_max, Rn_2021%saw_min, Rn_2021%saw, Rn_2021%saw_u, Rn_2021%asaw, Rn_2021%asaw_u)

!> francium.
type(element_t_2021), parameter, public :: Fr_2021 =&
element_t_2021("francium","Fr", 87, nan, nan, nan, nan, nan, nan)
!> C API francium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Fr_2021") :: capi_Fr_2021 =&
capi_element_t_2021(&
["f","r","a","n","c","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["F","r",c_null_char, " "," "," "," "," "," "], &
Fr_2021%z, &
Fr_2021%saw_max, Fr_2021%saw_min, Fr_2021%saw, Fr_2021%saw_u, Fr_2021%asaw, Fr_2021%asaw_u)

!> radium.
type(element_t_2021), parameter, public :: Ra_2021 =&
element_t_2021("radium","Ra", 88, nan, nan, nan, nan, nan, nan)
!> C API radium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ra_2021") :: capi_Ra_2021 =&
capi_element_t_2021(&
["r","a","d","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","a",c_null_char, " "," "," "," "," "," "], &
Ra_2021%z, &
Ra_2021%saw_max, Ra_2021%saw_min, Ra_2021%saw, Ra_2021%saw_u, Ra_2021%asaw, Ra_2021%asaw_u)

!> actinium.
type(element_t_2021), parameter, public :: Ac_2021 =&
element_t_2021("actinium","Ac", 89, nan, nan, nan, nan, nan, nan)
!> C API actinium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ac_2021") :: capi_Ac_2021 =&
capi_element_t_2021(&
["a","c","t","i","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","c",c_null_char, " "," "," "," "," "," "], &
Ac_2021%z, &
Ac_2021%saw_max, Ac_2021%saw_min, Ac_2021%saw, Ac_2021%saw_u, Ac_2021%asaw, Ac_2021%asaw_u)

!> thorium.
type(element_t_2021), parameter, public :: Th_2021 =&
element_t_2021("thorium","Th", 90, nan, nan, 232.0377d0, 0.0004d0, 232.04d0, 0.01d0)
!> C API thorium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Th_2021") :: capi_Th_2021 =&
capi_element_t_2021(&
["t","h","o","r","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","h",c_null_char, " "," "," "," "," "," "], &
Th_2021%z, &
Th_2021%saw_max, Th_2021%saw_min, Th_2021%saw, Th_2021%saw_u, Th_2021%asaw, Th_2021%asaw_u)

!> protactinium.
type(element_t_2021), parameter, public :: Pa_2021 =&
element_t_2021("protactinium","Pa", 91, nan, nan, 231.03588d0, 0.00001d0, 231.04d0, 0.01d0)
!> C API protactinium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Pa_2021") :: capi_Pa_2021 =&
capi_element_t_2021(&
["p","r","o","t","a","c","t","i","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "], &
["P","a",c_null_char, " "," "," "," "," "," "], &
Pa_2021%z, &
Pa_2021%saw_max, Pa_2021%saw_min, Pa_2021%saw, Pa_2021%saw_u, Pa_2021%asaw, Pa_2021%asaw_u)

!> uranium.
type(element_t_2021), parameter, public :: U_2021 =&
element_t_2021("uranium","U", 92, nan, nan, 238.02891d0, 0.00003d0, 238.03d0, 0.01d0)
!> C API uranium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_U_2021") :: capi_U_2021 =&
capi_element_t_2021(&
["u","r","a","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["U",c_null_char, " "," "," "," "," "," "," "], &
U_2021%z, &
U_2021%saw_max, U_2021%saw_min, U_2021%saw, U_2021%saw_u, U_2021%asaw, U_2021%asaw_u)

!> neptunium.
type(element_t_2021), parameter, public :: Np_2021 =&
element_t_2021("neptunium","Np", 93, nan, nan, nan, nan, nan, nan)
!> C API neptunium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Np_2021") :: capi_Np_2021 =&
capi_element_t_2021(&
["n","e","p","t","u","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","p",c_null_char, " "," "," "," "," "," "], &
Np_2021%z, &
Np_2021%saw_max, Np_2021%saw_min, Np_2021%saw, Np_2021%saw_u, Np_2021%asaw, Np_2021%asaw_u)

!> plutonium.
type(element_t_2021), parameter, public :: Pu_2021 =&
element_t_2021("plutonium","Pu", 94, nan, nan, nan, nan, nan, nan)
!> C API plutonium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Pu_2021") :: capi_Pu_2021 =&
capi_element_t_2021(&
["p","l","u","t","o","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","u",c_null_char, " "," "," "," "," "," "], &
Pu_2021%z, &
Pu_2021%saw_max, Pu_2021%saw_min, Pu_2021%saw, Pu_2021%saw_u, Pu_2021%asaw, Pu_2021%asaw_u)

!> americium.
type(element_t_2021), parameter, public :: Am_2021 =&
element_t_2021("americium","Am", 95, nan, nan, nan, nan, nan, nan)
!> C API americium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Am_2021") :: capi_Am_2021 =&
capi_element_t_2021(&
["a","m","e","r","i","c","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","m",c_null_char, " "," "," "," "," "," "], &
Am_2021%z, &
Am_2021%saw_max, Am_2021%saw_min, Am_2021%saw, Am_2021%saw_u, Am_2021%asaw, Am_2021%asaw_u)

!> curium.
type(element_t_2021), parameter, public :: Cm_2021 =&
element_t_2021("curium","Cm", 96, nan, nan, nan, nan, nan, nan)
!> C API curium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Cm_2021") :: capi_Cm_2021 =&
capi_element_t_2021(&
["c","u","r","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","m",c_null_char, " "," "," "," "," "," "], &
Cm_2021%z, &
Cm_2021%saw_max, Cm_2021%saw_min, Cm_2021%saw, Cm_2021%saw_u, Cm_2021%asaw, Cm_2021%asaw_u)

!> berkelium.
type(element_t_2021), parameter, public :: Bk_2021 =&
element_t_2021("berkelium","Bk", 97, nan, nan, nan, nan, nan, nan)
!> C API berkelium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Bk_2021") :: capi_Bk_2021 =&
capi_element_t_2021(&
["b","e","r","k","e","l","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","k",c_null_char, " "," "," "," "," "," "], &
Bk_2021%z, &
Bk_2021%saw_max, Bk_2021%saw_min, Bk_2021%saw, Bk_2021%saw_u, Bk_2021%asaw, Bk_2021%asaw_u)

!> californium.
type(element_t_2021), parameter, public :: Cf_2021 =&
element_t_2021("californium","Cf", 98, nan, nan, nan, nan, nan, nan)
!> C API californium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Cf_2021") :: capi_Cf_2021 =&
capi_element_t_2021(&
["c","a","l","i","f","o","r","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","f",c_null_char, " "," "," "," "," "," "], &
Cf_2021%z, &
Cf_2021%saw_max, Cf_2021%saw_min, Cf_2021%saw, Cf_2021%saw_u, Cf_2021%asaw, Cf_2021%asaw_u)

!> einsteinium.
type(element_t_2021), parameter, public :: Es_2021 =&
element_t_2021("einsteinium","Es", 99, nan, nan, nan, nan, nan, nan)
!> C API einsteinium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Es_2021") :: capi_Es_2021 =&
capi_element_t_2021(&
["e","i","n","s","t","e","i","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "], &
["E","s",c_null_char, " "," "," "," "," "," "], &
Es_2021%z, &
Es_2021%saw_max, Es_2021%saw_min, Es_2021%saw, Es_2021%saw_u, Es_2021%asaw, Es_2021%asaw_u)

!> fermium.
type(element_t_2021), parameter, public :: Fm_2021 =&
element_t_2021("fermium","Fm", 100, nan, nan, nan, nan, nan, nan)
!> C API fermium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Fm_2021") :: capi_Fm_2021 =&
capi_element_t_2021(&
["f","e","r","m","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["F","m",c_null_char, " "," "," "," "," "," "], &
Fm_2021%z, &
Fm_2021%saw_max, Fm_2021%saw_min, Fm_2021%saw, Fm_2021%saw_u, Fm_2021%asaw, Fm_2021%asaw_u)

!> mendelevium.
type(element_t_2021), parameter, public :: Md_2021 =&
element_t_2021("mendelevium","Md", 101, nan, nan, nan, nan, nan, nan)
!> C API mendelevium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Md_2021") :: capi_Md_2021 =&
capi_element_t_2021(&
["m","e","n","d","e","l","e","v","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","d",c_null_char, " "," "," "," "," "," "], &
Md_2021%z, &
Md_2021%saw_max, Md_2021%saw_min, Md_2021%saw, Md_2021%saw_u, Md_2021%asaw, Md_2021%asaw_u)

!> nobelium.
type(element_t_2021), parameter, public :: No_2021 =&
element_t_2021("nobelium","No", 102, nan, nan, nan, nan, nan, nan)
!> C API nobelium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_No_2021") :: capi_No_2021 =&
capi_element_t_2021(&
["n","o","b","e","l","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","o",c_null_char, " "," "," "," "," "," "], &
No_2021%z, &
No_2021%saw_max, No_2021%saw_min, No_2021%saw, No_2021%saw_u, No_2021%asaw, No_2021%asaw_u)
